Add HeroSummaryModelView; Rework Views and mapping;

--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -16,7 +16,8 @@
             <partial name="_HeroBasicPresentation" model="@Model.Basics" />
         </div>
         <div class="col-md-4">
-            <partial name="_HeroStatistics" model="@Model.Statistics" />
+            <partial name="_HeroStatistics" model="@Model.Statistics" /><br/><br/>
+            <partial name="_HeroSummary" model="Model.Summary"/>
         </div>
     </div>
 
