--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -21,7 +21,7 @@
         <hr/>
     </div>
     <div class="col-4">
-        <partial name="_HeroSummary" model="@Model"/>
+        <partial name="_HeroSummary" model="@Model.HeroSummary"/>
         <br/>
         <partial name="_HeroAttributes" model="@Model.Attributes"/>
     </div>
