--- a/wizards/WizardsWeb/Views/Shared/_HeroSummary.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_HeroSummary.cshtml
@@ -1,4 +1,4 @@
-﻿@model WizardsWeb.ModelViews.Inventory.InventoryModelView
+﻿@model WizardsWeb.ModelViews.HeroModelViews.Properties.HeroSummaryModelView
 
 <h4>Hero's Summary</h4>
 <hr />
