--- a/wizards/WizardsWeb/Views/Inventory/_ItemBasicInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_ItemBasicInfo.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Wizards.Core.Model.Enums
 @model WizardsWeb.ModelViews.Inventory.HeroItemDetailsModelView
 
-<div class="row p-2">
+<div class="row p-0 m-0">
     <div class="col-12 text-center">
-        <h5 class="font-weight-bolder">@Model.Name</h5>
+        <h4 class="font-weight-bolder">@Model.Name</h4>
     </div>
     <div class="col-12 text-center">
         <span class="font-weight-bold">@Model.Type.ToString()</span>
@@ -18,9 +18,10 @@
             <span class="font-italic font-weight-light">@Model.Restriction.ToString() Exclusive</span>
         }
     </div>
-    <div class="col-12 text-right">
-        <h5><label class="m-0 p-0 font-weight-bolder" asp-for="Tier"></label>
-            <label class="m-0 p-0 font-weight-bolder">@Model.Tier</label></h5>
+    <div class="col-12 text-right h5">
+        <br class="p-0 m-0"/>
+        <label class="m-0 p-0 font-weight-bolder" asp-for="Tier"></label>
+        <label class="m-0 p-0 font-weight-bolder">@Model.Tier</label>
     </div>
     <div class="col-md-12 text-right">
         @if (Model.IsEquipped)
