--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -20,7 +20,7 @@
         <partial name="_HeroSummary" model="Model.Summary"/>
         <br/><br/>
         <a type="button" class="btn btn-warning" asp-controller="Inventory" asp-action="Index">Equipment</a><br /><br />
-        <a type="button" class="btn btn-warning" asp-action="Merchant">Merchant</a><br /><br />
+        <a type="button" class="btn btn-warning" asp-controller="Merchant" asp-action="Index">Merchant</a><br /><br />
         <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details">Back to Hero choice</a><br /><br />
         <a type="button" class="btn btn-warning disabled" asp-action="ArenaPvP">PvP Arena</a><br /><br />
     </div>
