--- a/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Wizards.Core.Model.Enums
-@model WizardsWeb.ModelViews.Inventory.HeroItemDetailsModelView
+@model WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView
 
 <div class="row p-0 m-0">
     <div class="col-12 text-center">
