--- a/wizards/WizardsWeb/Views/Item/_ItemEnduranceBar.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemEnduranceBar.cshtml
@@ -1,4 +1,4 @@
-﻿@model WizardsWeb.ModelViews.Inventory.HeroItemDetailsModelView
+﻿@model WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView
 
 <div class="row">
     <div class="col-12">
