--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -1,4 +1,5 @@
-﻿@model WizardsWeb.ModelViews.Inventory.InventoryModelView
+﻿@using WizardsWeb.Helpers
+@model WizardsWeb.ModelViews.Inventory.InventoryModelView
 
 <div class="col-12">
     <div class="row">
@@ -28,18 +29,18 @@
 
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-weapons" role="tabpanel" aria-labelledby="pills-weapons-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Weapons"/>
+            <partial name="~/Views/Item/_ItemIndexDetails.cshtml" model="@Model.Weapons"/>
         </div>
         <div class="tab-pane fade" id="pills-armors" role="tabpanel" aria-labelledby="pills-armors-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Armors"/>
+            <partial name="~/Views/Item/_ItemIndexDetails.cshtml" model="@Model.Armors"/>
         </div>
         <div class="tab-pane fade" id="pills-miscs" role="tabpanel" aria-labelledby="pills-miscs-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Miscellaneous"/>
+            <partial name="~/Views/Item/_ItemIndexDetails.cshtml" model="@Model.Miscellaneous"/>
         </div>
     </div>
 </div>
 
-<!-- Modal for All Items Repair -->
+<!-- Modal for All Items Repairing -->
 <div class="modal fade" id="repair-all" aria-hidden="true" aria-labelledby="label-repair-all" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -62,6 +63,38 @@
                         No
                     </button>
                     <a class="btn btn-success" asp-controller="Inventory" asp-action="RepairAll">
+                        Yes
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for Equipped Items Repairing -->
+<div class="modal fade" id="repair-equipped" aria-hidden="true" aria-labelledby="label-repair-equipped" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header table-info">
+                <div class="col-12 text-center">
+                    <h2>Repairing all equipped items</h2>
+                </div>
+            </div>
+            <div class="modal-body alert alert-warning">
+                <div class="h3 text-center text-dark">
+                    <span>Do you want to repair all equipped items for </span>
+                    <span class="font-weight-bold">
+                        @($"{Model.Equipped.GetRepairCostForEquipment():#,##0}")
+                    </span>
+                    <span> Gold?</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group col-12">
+                    <button class="btn btn-warning" data-bs-dismiss="modal">
+                        No
+                    </button>
+                    <a class="btn btn-success" asp-controller="Inventory" asp-action="RepairEquipped">
                         Yes
                     </a>
                 </div>
