refactore for partials; implement logic thats adjusts partials for situations;

--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Inventory";
 }
 
-<h2>Hero's Inventory</h2>
+<h2>@(Model.HeroNickName)'s Inventory</h2>
 <hr />
 <div class="row">
     <div class="col-6">
