--- a/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
@@ -14,10 +14,21 @@
             <label asp-for="FirstOrDefault().Tier"></label>
         </th>
         <th>
-            <label asp-for="FirstOrDefault().Endurance"></label>
+            @if (Model.CanShowEndurance())
+            {
+                <label asp-for="FirstOrDefault().Endurance"></label>
+            }
+            else if(Model.CanShowBuyPrice())
+            {
+                <label asp-for="FirstOrDefault().BuyPrice"></label>
+            }
+            else if (Model.CanShowSellPrice())
+            {
+                <label asp-for="FirstOrDefault().BuyPrice"></label>
+            }
         </th>
         <th>
-            @if (Model.GetRepairCostForEquipment() >= 1)
+            @if (Model.CanShowRepairEquipmentButton())
             {
                 <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target="#repair-equipped">
                     Repair all equipped
@@ -39,70 +50,45 @@
             <td>
                 <span class="text-center">@item.Tier</span>
             </td>
-            <td>
-                <partial name="~/Views/Item/_ItemEnduranceBar.cshtml" model="@item" />
-            </td>
+            @if (Model.CanShowEndurance())
+            {
+                <td><partial name="~/Views/Item/_ItemEnduranceBar.cshtml" model="@item"/></td>
+            }
+            else if(Model.CanShowBuyPrice())
+            {
+                <td>@($"{item.BuyPrice:#,##0}")</td>
+            }
+            else if (Model.CanShowSellPrice())
+            {
+                <td>@($"{item.SellPrice:#,##0}")</td>
+            }
             <td>
                 <div class="btn-group">
                     <!-- Button trigger modal for Details -->
-                    <a class="btn btn-primary btn-sm" data-bs-toggle="modal" href="#details-@item.Id">
-                        Details
-                    </a>
+                    <a class="btn btn-primary btn-sm" data-bs-toggle="modal" href="#details-@item.Id">Details</a>
 
-                    @if (item.IsEquipped)
+                    @if (item.IsEquipped && !item.IsInMerchantMode && !item.IsMerchantItem)
                     {
                         <a class="btn btn-warning btn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Unequip">Unequip</a>
                     }
-                    else
+                    else if (!item.IsEquipped && !item.IsInMerchantMode && !item.IsMerchantItem)
                     {
                         <a class="btn btn-success btn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Equip">Equip</a>
+                    }
+                    else if (item.IsInMerchantMode && !item.IsMerchantItem)
+                    {
+                        <a class="btn btn-primary btn-sm" data-bs-toggle="modal" href="#sell-item-@item.Id">Sell</a>
+                    }
+                    else if (item.IsMerchantItem)
+                    {
+                        <a class="btn btn-primary btn-sm" data-bs-toggle="modal" href="#buy-item-@item.CoreItemId">Buy</a>
                     }
                 </div>
             </td>
         </tr>
 
-        <!-- Modal for Details -->
-        <div class="modal fade" id="details-@item.Id" tabindex="-1" aria-labelledby="label-a-@item.Id" aria-hidden="true" tabindex="-1">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header table-@item.GetItemTierColor()">
-                        <partial name="~/Views/Item/_ItemBasicInfo.cshtml" model="item" />
-                    </div>
-                    <div class="modal-body">
-                        <partial name="~/Views/Item/_ItemAttributesInfo.cshtml" model="@item.Attributes" />
-                    </div>
-                    <div class="modal-footer">
-                        <partial name="~/Views/Item/_ItemEconomyInfo.cshtml" model="item" />
-                    </div>
-                </div>
-            </div>
-        </div>
+        <partial name="~/Views/Item/_ModalsForItemIndexDetails.cshtml" model="@item"/>
 
-        <!-- Modal for Repair -->
-        <div class="modal fade" id="repair-item-@item.Id" aria-hidden="true" aria-labelledby="label-b-@item.Id" tabindex="-1">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header table-@item.GetItemTierColor()">
-                        <partial name="~/Views/Item/_ItemBasicInfo.cshtml" model="@item" />
-                    </div>
-                    <div class="modal-body alert alert-warning">
-                        <div class="h3 text-center text-dark">
-                            <span>Do you want to repair this item for </span>
-                            <span class="font-weight-bold">@($"{item.RepairCost:#,##0}")</span>
-                            <span> Gold?</span>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <div class="btn-group col-12">
-                            <button class="btn btn-warning" data-bs-target="#details-@item.Id" data-bs-toggle="modal">No</button>
-                            <a class="btn btn-success" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Repair">
-                                Yes
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     }
     </tbody>
 </table>
