--- a/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemBasicInfo.cshtml
@@ -24,7 +24,7 @@
         <label class="m-0 p-0 font-weight-bolder">@Model.Tier</label>
     </div>
     <div class="col-md-12 text-right">
-        @if (Model.IsEquipped)
+        @if (Model.IsEquipped && !Model.IsMerchantItem && !Model.IsInMerchantMode)
         {
             <hr class="p-0 m-0"/>
             <span class="font-italic font-weight-light">Equipped</span>
