--- a/wizards/WizardsWeb/Views/Merchant/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/Index.cshtml
@@ -20,11 +20,19 @@
 </div>
 <div class="row">
     <div class="col-6">
-        HERO STORAGE HERE
-        @*<partial name="_HeroStorage" model="@Model.HeroStorage"/>*@
+        <partial name="_HeroStorage" model="@Model.HeroStorage"/>
     </div>
     <div class="col-6">
-        MERCHANT STORAGE HERE
-        @*<partial name="_MerchantStorage" model="@Model.MerchantStorage"/>*@
+        <partial name="_MerchantStorage" model="@Model.MerchantStorage"/>
     </div>
 </div>
+
+<script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
+    crossorigin="anonymous">
+</script>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
