--- a/wizards/WizardsWeb/Views/Item/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Item/Edit.cshtml
@@ -1,78 +1,84 @@
 ﻿@model WizardsWeb.ModelViews.ItemModelViews.ItemEditModelView
-@using Wizards.Core.Model.Enums
+
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>ItemEditModelView</h4>
+<h1>Edit @Model.Name</h1>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="Id" hidden="true"/>
+
+<form asp-action="Edit">
+    <div class="row">
+        <div class="col-3">
+            <div class="h4">
+                <span class="font-weight-bold">Basics</span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>                  
+            </div>
             <div class="form-group">
                 <label asp-for="Tier" class="control-label"></label>
-                <input asp-for="Tier" min="1" max="5" class="form-control" />
+                <input asp-for="Tier" min="1" max="5" class="form-control"/>
                 <span asp-validation-for="Tier" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BuyPrice" class="control-label"></label>
-                <input asp-for="BuyPrice" min="0" max="100000" class="form-control" />
+                <input asp-for="BuyPrice" min="0" max="100000" class="form-control"/>
                 <span asp-validation-for="BuyPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SellPrice" class="control-label"></label>
-                <input asp-for="SellPrice" min="0" max="100000" class="form-control" />
+                <input asp-for="SellPrice" min="0" max="100000" class="form-control"/>
                 <span asp-validation-for="SellPrice" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="h4">
+                <span class="font-weight-bold">Attributes</span>
             </div>
             <div class="form-group">
                 <label asp-for="Damage" class="control-label"></label>
-                <input asp-for="Damage" min="-10" max="50" class="form-control" />
+                <input asp-for="Damage" min="-10" max="50" class="form-control"/>
                 <span asp-validation-for="Damage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Precision" class="control-label"></label>
-                <input asp-for="Precision" min="-10" max="50" class="form-control" />
+                <input asp-for="Precision" min="-10" max="50" class="form-control"/>
                 <span asp-validation-for="Precision" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Specialization" class="control-label"></label>
-                <input asp-for="Specialization" min="-10" max="50" class="form-control" />
+                <input asp-for="Specialization" min="-10" max="50" class="form-control"/>
                 <span asp-validation-for="Specialization" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MaxHealth" class="control-label"></label>
-                <input asp-for="MaxHealth" min="0" max="500"class="form-control" />
+                <input asp-for="MaxHealth" min="0" max="500" class="form-control"/>
                 <span asp-validation-for="MaxHealth" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Reflex" class="control-label"></label>
-                <input asp-for="Reflex" min="-10" max="50" class="form-control" />
+                <input asp-for="Reflex" min="-10" max="50" class="form-control"/>
                 <span asp-validation-for="Reflex" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Defense" class="control-label"></label>
-                <input asp-for="Defense" min="-10" max="50" class="form-control" />
+                <input asp-for="Defense" min="-10" max="50" class="form-control"/>
                 <span asp-validation-for="Defense" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div class="row">
+        <div class="col-6">
+            <div class="btn-group btn-block">
+                <input class="btn btn-primary" type="submit" value="Save Changes" />
+                <a class="btn btn-warning" asp-controller="Merchant" asp-action="Index">Back to Merchant</a>
+            </div>
+        </div>
+    </div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
