--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -1,5 +1,5 @@
-﻿@using WizardsWeb.Helpers
-@model WizardsWeb.ModelViews.Inventory.InventoryModelView
+﻿@model WizardsWeb.ModelViews.Inventory.InventoryModelView
+@using WizardsWeb.Helpers
 
 <div class="col-12">
     <div class="row">
