--- a/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
@@ -1,7 +1,6 @@
-﻿@using WizardsWeb.Helpers
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model IEnumerable<WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView>
+@using WizardsWeb.Helpers
 @using Wizards.Core.Model.Enums
-@model IEnumerable<WizardsWeb.ModelViews.ItemModelViews.ItemDetailsModelView>
 
 <table class="table">
     <thead>
