--- a/wizards/WizardsWeb/Views/Merchant/_MerchantStorage.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/_MerchantStorage.cshtml
@@ -1,5 +1,5 @@
-﻿@using Wizards.Core.Model.Enums
-@model WizardsWeb.ModelViews.Merchant.MerchantStorageModelView
+﻿@model WizardsWeb.ModelViews.Merchant.MerchantStorageModelView
+@using Wizards.Core.Model.Enums
 
 <div class="row">
     <div class="col-8">
