--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -5,25 +5,27 @@
 }
 
 <div class="row">
-    <div class="col-md-4">
-        <partial name="_HeroBasicPresentation" model="@Model.Basics" /><br />
-        <div class="btn-group">
-            <a class="btn btn-primary" asp-action="EditNickName">
-                Edit Name
-            </a>
-            <a class="btn btn-primary" asp-action="EditAvatar">
-                Edit Avatar
-            </a>
-        </div>
+    @*    <div class="col-md-4">
+    <partial name="_HeroBasicPresentation" model="@Model.Basics" /><br />
+    <div class="btn-group">
+    <a class="btn btn-primary" asp-action="EditNickName">
+    Edit Name
+    </a>
+    <a class="btn btn-primary" asp-action="EditAvatar">
+    Edit Avatar
+    </a>
+    </div>
     </div>
     <div class="col-md-4">
-        <partial name="_HeroSummary" model="Model.Summary"/>
-        <br/><br/>
-        <a type="button" class="btn btn-warning" asp-controller="Inventory" asp-action="Index">Equipment</a><br /><br />
-        <a type="button" class="btn btn-warning" asp-controller="Merchant" asp-action="Index">Merchant</a><br /><br />
-        <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details">Back to Hero choice</a><br /><br />
-        <a type="button" class="btn btn-warning disabled" asp-action="ArenaPvP">PvP Arena</a><br /><br />
-    </div>
+    <partial name="_HeroSummary" model="Model.Summary" />
+    <br /><br />
+    <a type="button" class="btn btn-warning" asp-controller="Inventory" asp-action="Index">Equipment</a><br /><br />
+    <a type="button" class="btn btn-warning" asp-controller="Merchant" asp-action="Index">Merchant</a><br /><br />
+    <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details">Back to Hero choice</a><br /><br />
+    <a type="button" class="btn btn-warning disabled" asp-action="ArenaPvP">PvP Arena</a><br /><br />
+    </div>*@
+
+
     <div class="col-md-4">
         <partial name="_HeroBasicPresentation" model="@Model.Basics" />
     </div>
@@ -42,6 +44,12 @@
         <br />
 
         <div class="flex-md-row">
+                    <partial name="_HeroSummary" model="Model.Summary" />
+        </div>
+
+        <br />
+
+        <div class="flex-md-row">
             <ul class="list-group btn-block">
                 <li class="list-group-item d-flex justify-content-between lh-sm">
                     <div>
@@ -52,10 +60,10 @@
                 </li>
 
                 <li class="list-group-item d-flex justify-content-between btn-group lh-sm d-block">
-                    <a type="button" class="btn btn-outline-secondary" asp-action="Equipment">Equipment</a>
-                    <a type="button" class="btn btn-outline-primary" asp-action="Merchant">Merchant</a>
+                    <a type="button" class="btn btn-outline-secondary" asp-controller="Inventory" asp-action="Index">Equipment</a>
+                    <a type="button" class="btn btn-outline-primary" asp-controller="Merchant" asp-action="Index">Merchant</a><br />
                     <a type="button" class="btn btn-outline-info" asp-controller="Player" asp-action="Details">Back to Hero choice</a>
-                    <a type="button" class="btn btn-outline-danger" asp-action="ArenaPvP">PvP Arena</a>
+                    <a type="button" class="btn btn-outline-danger disabled" asp-action="ArenaPvP">PvP Arena</a>
                 </li>
             </ul>
         </div>
