--- a/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroSummary.cshtml
@@ -1,6 +1,31 @@
 ﻿@model WizardsWeb.ModelViews.HeroModelViews.Properties.HeroSummaryModelView
 
-<h4>Hero's Summary</h4>
+<div class="row">
+    <div class="col-md-12">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h5 class="my-0 font-weight-bold">
+                        Hero's Summary
+                    </h5>
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <label asp-for="HerosAvargeItemTier"></label>
+                @($"{Model.HerosAvargeItemTier:##0.00}")
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <label asp-for="Gold"></label>
+                @($"{Model.Gold:##,##0}")
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+@*<h4>Hero's Summary</h4>
 <hr />
 <div class="col-md-12">
     <div class="row">
@@ -11,7 +36,7 @@
             <h5><span class="font-weight-bold">@($"{Model.HerosAvargeItemTier:##0.00}")</span></h5>
         </div>
     </div>
-    <hr/>
+    <hr />
     <div class="row">
         <div class="col-md-7">
             <label asp-for="Gold"></label>
@@ -20,5 +45,5 @@
             <span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span>
         </div>
     </div>
-    <hr/>
-</div>
+    <hr />
+</div>*@
