--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -2,39 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 <head>
     <style>
-        body {
-            background-image: url("/Images/Tapeta-3.jpg");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
-        }
-
         .dupa {
             background-image: url("/Images/Tapeta-3.jpg");
             background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
+            background-attachment: inherit;
+            background-size: contain;
+            height: 650px;
         }
-
     </style>
 </head>
-
-<body>
-    <div class="cover-container flex-fill d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <div class="dupa">
-            <div class="text-center">
-
-
-                <h1 class="display-4">Welcome</h1>
-                <p>Are you lost wizard?</p>
-            </div>
-        </div>
-
-
+<div class="dupa col-12">
+    <div class="text-center text-black">
+        <br /><br />
+        <h1 class="font-weight-bolder">Welcome Adventurer!</h1>
+        <br />
+        <h3 class="font-weight-bolder">Do you want to become Wizard?</h3>
+        <br />
     </div>
-</body>
+</div>
 
 
