--- a/wizards/WizardsWeb/Views/Merchant/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/Index.cshtml
@@ -4,35 +4,67 @@
     ViewData["Title"] = "Merchant";
 }
 
-<h2>Merchant</h2>
-<hr />
 <div class="row">
-    <div class="col-6">
-        <div class="btn-group">
-            <a class="btn btn-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
-            <a class="btn btn-warning" asp-controller="Inventory" asp-action="Index">Back to Inventory</a>
-        </div>
-    </div>
-</div>
-<hr />
-<div class="row">
-    <div asp-validation-summary="ModelOnly" id="myCustomSummary" class="col-12 alert alert-danger h2 text-center p-3" style="list-style-type: none;"></div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <partial name="_HeroStorage" model="@Model.HeroStorage"/>
-    </div>
-    <div class="col-6">
-        <partial name="_MerchantStorage" model="@Model.MerchantStorage"/>
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h5 class="my-0 font-weight-bold">
+                        Merchant
+                    </h5>
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div class="btn-group btn-block">
+                    <a class="btn btn-outline-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
+                    <a class="btn btn-outline-warning" asp-controller="Inventory" asp-action="Index">Back to Inventory</a>
+                </div>
+            </li>
+        </ul>
+        <br />
     </div>
 </div>
 
-<script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
-    crossorigin="anonymous">
+
+<div class="row">
+    <div asp-validation-summary="ModelOnly" id="myCustomSummary" class="col-12 alert alert-danger h2 text-center p-3" style="list-style-type: none;"></div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <partial name="_HeroStorage" model="@Model.HeroStorage" />
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-md-6">
+
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <partial name="_MerchantStorage" model="@Model.MerchantStorage" />
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
+
+
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous">
 </script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}
+    }
